--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 			<p class='footer-description'>Зв'яжіться зі мною і я з радістю відповім на них</p>
 		</section>
 
-		<article class='social-networks-container'>
+		<article class='social-networks-container footer-networks'>
 		<section class='social-network-blocks'>
 			<div class='social-network-block'>
 				<a target='_blank' class='social-network-block-link'
