added new block

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price'>400 грн</span>
+							<span class='accordion-price'>490 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -96,7 +96,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price'>350 грн</span>
+							<span class='accordion-price'>380 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -117,7 +117,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price'>500 грн</span>
+							<span class='accordion-price'>520 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -134,7 +134,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price'>50 грн</span>
+							<span class='accordion-price'>100 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -176,7 +176,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price'>289 грн</span>
+							<span class='accordion-price'>299 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -202,7 +202,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price'>420 грн</span>
+							<span class='accordion-price'>490 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -221,7 +221,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price'>100 грн</span>
+							<span class='accordion-price'>150 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -257,7 +257,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price'>50 грн</span>
+							<span class='accordion-price'>180 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -276,7 +276,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price'>888 грн</span>
+							<span class='accordion-price'>999 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -305,7 +305,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price'>300 грн</span>
+							<span class='accordion-price'>380 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -390,7 +390,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price'>137 грн</span>
+							<span class='accordion-price'>237 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -415,6 +415,68 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</footer>
 					</main>
 				</div>
+
+				<div class='accordion'>
+					<header class='accordion-header'>
+						<h4 class='accordion-title'>Що мені принесе ця подія?</h4>
+						<img src="./assets/icons/IconPlus.svg" alt="accrodion-icon" class="accordion-icon">
+					</header>
+					<main class='accordion-container'>
+						<ol class='accordion-list'>
+							<li class='accordion-item'>Що я отримаю внаслідок цієї події?</li>
+							<li class='accordion-item'>Як на мене емоційно вплине ця ситуація?</li>
+							<li class='accordion-item'>Порада</li>
+						</ol>
+
+						<footer class='accordion-footer'>
+							<span class='accordion-price'>111 грн</span>
+						</footer>
+					</main>
+				</div>
+
+				<div class='accordion'>
+					<header class='accordion-header'>
+						<h4 class='accordion-title'>Що означає мій сон?</h4>
+						<img src="./assets/icons/IconPlus.svg" alt="accrodion-icon" class="accordion-icon">
+					</header>
+					<main class='accordion-container'>
+						<ol class='accordion-list'>
+							<li class='accordion-item'>Навіщо мені снився цей сон?</li>
+							<li class='accordion-item'>Що передвіщає цей сон?</li>
+							<li class='accordion-item'>Від чого застерігає сон?</li>
+							<li class='accordion-item'>Як цей сон може допомогти мені в реальному житті?</li>
+							<li class='accordion-item'>Порада</li>
+						</ol>
+
+						<footer class='accordion-footer'>
+							<span class='accordion-price'>222 грн</span>
+						</footer>
+					</main>
+				</div>
+			</section>
+		</article>
+
+		<article class="catalogs-container">
+			<section class="catalog-accordion-container catalog-accordion-container-one">
+				<h3 class='catalog-accordion-title'>Фінансовий код</h3>
+				<div class='accordion'>
+					<header class='accordion-header'>
+						<h4 class='accordion-title'>Допоможи собі сама</h4>
+						<img src="./assets/icons/IconPlus.svg" alt="accrodion-icon" class="accordion-icon">
+					</header>
+					<main class='accordion-container'>
+						<ol class='accordion-list'>
+							<li class='accordion-item'>- Файл +-30 сторінок ВАШИХ особистих рекомендацій стосовно фінансів</li>
+						</ol>
+
+						<footer class='accordion-footer'>
+							<span class='accordion-price'>444 грн</span>
+						</footer>
+					</main>
+				</div>
+			
+
+				
 			</section>
 		</article>
 	</section>
