added new block

--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 		<article class="introduction-price-list-container">
 			<p>Якщо готові розклади не підходять:</>
 			</p>
-			<p><strong>1 обширне питання – 80 грн</strong></p>
-			<p>(3 питання – 200 грн)</p>
+			<p><strong>1 обширне питання – 90 грн</strong></p>
+			<p>(3 питання – 215 грн + далі кожне додаткове питання рахується
+				по 80 грн)</p>
 			<p><strong>Порада та застереження</strong></p>
-			<p><strong>на місяць – 70 грн</strong></p>
+			<p><strong>на місяць – 100 грн</strong></p>
 		</article>
 	</article>
 	<article class='social-networks-container'>
@@ -76,7 +77,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price'>490 грн</span>
+							<span class='accordion-price accordion-price-one'>490 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -96,7 +97,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price'>380 грн</span>
+							<span class='accordion-price accordion-price-one'>380 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -117,7 +118,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price'>520 грн</span>
+							<span class='accordion-price accordion-price-one'>520 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -134,7 +135,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price'>100 грн</span>
+							<span class='accordion-price accordion-price-one'>100 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -155,7 +156,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price'>280 грн</span>
+							<span class='accordion-price accordion-price-one'>280 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -176,7 +177,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price'>299 грн</span>
+							<span class='accordion-price accordion-price-one'>299 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -202,7 +203,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price'>490 грн</span>
+							<span class='accordion-price accordion-price-two'>490 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -221,7 +222,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price'>150 грн</span>
+							<span class='accordion-price accordion-price-two'>150 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -240,7 +241,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price'>170 грн</span>
+							<span class='accordion-price accordion-price-two'>170 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -257,7 +258,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price'>180 грн</span>
+							<span class='accordion-price accordion-price-two'>180 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -276,7 +277,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price'>999 грн</span>
+							<span class='accordion-price accordion-price-two'>999 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -305,7 +306,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price'>380 грн</span>
+							<span class='accordion-price accordion-price-one'>380 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -326,7 +327,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price'>500 грн</span>
+							<span class='accordion-price accordion-price-one'>500 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -350,7 +351,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price'>300 грн</span>
+							<span class='accordion-price accordion-price-two'>300 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -369,7 +370,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price'>225 грн</span>
+							<span class='accordion-price accordion-price-two'>225 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -390,7 +391,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price'>237 грн</span>
+							<span class='accordion-price accordion-price-two'>237 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -411,7 +412,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price'>222 грн</span>
+							<span class='accordion-price accordion-price-two'>222 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -429,7 +430,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price'>111 грн</span>
+							<span class='accordion-price accordion-price-two'>111 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -449,7 +450,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price'>222 грн</span>
+							<span class='accordion-price accordion-price-two'>222 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -466,17 +467,18 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 					</header>
 					<main class='accordion-container'>
 						<ol class='accordion-list'>
-							<li class='accordion-item'>- Файл +-30 сторінок ВАШИХ особистих рекомендацій стосовно фінансів</li>
+							<li class='accordion-item'>- Файл +-30 сторінок ВАШИХ особистих рекомендацій стосовно
+								фінансів</li>
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price'>444 грн</span>
+							<span class='accordion-price accordion-price-one'>444 грн</span>
 						</footer>
 					</main>
 				</div>
-			
 
-				
+
+
 			</section>
 		</article>
 	</section>
@@ -503,7 +505,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						професіонал і так далі. Дуже
 						приємно!
 					</p>
-				</div>	
+				</div>
 
 				<div class='slider-item short'>
 					<p class='slider-item-content'>
@@ -531,20 +533,20 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 		</section>
 
 		<article class='social-networks-container footer-networks'>
-		<section class='social-network-blocks'>
-			<div class='social-network-block'>
-				<a target='_blank' class='social-network-block-link'
-					href="https://instagram.com/nyuta__anyuta_?igshid=YTQwZjQ0NmI0OA==">
-					<img src="./assets/icons/IconInstagram.svg" alt="insagram-icon">
-				</a>
-			</div>
-			<div class='social-network-block'>
-				<a target='_blank' class='social-network-block-link' href="https://t.me/anyutik20">
-					<img src="./assets/icons/IconTelegram.svg" alt="telegram-icon">
-				</a>
-			</div>
-		</section>
-	</article>
+			<section class='social-network-blocks'>
+				<div class='social-network-block'>
+					<a target='_blank' class='social-network-block-link'
+						href="https://instagram.com/nyuta__anyuta_?igshid=YTQwZjQ0NmI0OA==">
+						<img src="./assets/icons/IconInstagram.svg" alt="insagram-icon">
+					</a>
+				</div>
+				<div class='social-network-block'>
+					<a target='_blank' class='social-network-block-link' href="https://t.me/anyutik20">
+						<img src="./assets/icons/IconTelegram.svg" alt="telegram-icon">
+					</a>
+				</div>
+			</section>
+		</article>
 	</footer>
 </body>
 
