added new block

--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 					</header>
 					<main class='accordion-container'>
 						<ol class='accordion-list'>
-							<li class='accordion-item'>- Файл +-30 сторінок ВАШИХ особистих рекомендацій стосовно
+							<li class='accordion-item'>Файл +-30 сторінок ВАШИХ особистих рекомендацій стосовно
 								фінансів</li>
 						</ol>
 
