added new block

--- a/index.html
+++ b/index.html
@@ -462,7 +462,8 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 				<h3 class='catalog-accordion-title'>Фінансовий код</h3>
 				<div class='accordion'>
 					<header class='accordion-header'>
-						<h4 class='accordion-title'>Допоможи собі сама</h4>
+						<h4 class='accordion-title'>Розрахунок фінансового
+коду</h4>
 						<img src="./assets/icons/IconPlus.svg" alt="accrodion-icon" class="accordion-icon">
 					</header>
 					<main class='accordion-container'>
