--- a/index.html
+++ b/index.html
@@ -189,6 +189,24 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 				<h3 class='catalog-accordion-title'>Загальні розклади</h3>
 				<div class='accordion'>
 					<header class='accordion-header'>
+						<h4 class='accordion-title'>Розклад на час ретроградного Меркурія</h4>
+						<img src="./assets/icons/IconPlus.svg" alt="accrodion-icon" class="accordion-icon">
+					</header>
+					<main class='accordion-container'>
+						<ol class='accordion-list'>
+							<li class='accordion-item'>Як пройде цей період в емоційному плані?</li>
+							<li class='accordion-item'>Як буде з фінансами та роботою?</li>
+							<li class='accordion-item'>Як будуть справи з відносинами?</li>
+							<li class='accordion-item'>Як слід себе вести і що робити? Чи не робити?</li>
+						</ol>
+
+						<footer class='accordion-footer'>
+							<span class='accordion-price accordion-price-two'>300 грн</span>
+						</footer>
+					</main>
+				</div>
+				<div class='accordion'>
+					<header class='accordion-header'>
 						<h4 class='accordion-title'>Розклад на місяць</h4>
 						<img src="./assets/icons/IconPlus.svg" alt="accrodion-icon" class="accordion-icon">
 					</header>
@@ -463,7 +481,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 				<div class='accordion'>
 					<header class='accordion-header'>
 						<h4 class='accordion-title'>Розрахунок фінансового
-коду</h4>
+							коду</h4>
 						<img src="./assets/icons/IconPlus.svg" alt="accrodion-icon" class="accordion-icon">
 					</header>
 					<main class='accordion-container'>
@@ -479,6 +497,57 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 				</div>
 
 
+
+			</section>
+		</article>
+		<article class="catalogs-container">
+			<section class="catalog-accordion-container catalog-accordion-container-two">
+				<h3 class='catalog-accordion-title'>Розрахунок Арканів
+					особистості </h3>
+				<div class='accordion'>
+					<header class='accordion-header'>
+						<h4 class='accordion-title'>Розрахунок арканів
+							особистості</h4>
+						<img src="./assets/icons/IconPlus.svg" alt="accrodion-icon" class="accordion-icon">
+					</header>
+					<main class='accordion-container'>
+						<ol class='accordion-list'>
+							<p class='accordion-item arcans'>
+								<b>Розрахунок арканів особистоті</b> - це визначення 4х ваших найголовніших арканів. За
+								допомогою цього методу ми можемо зчитати найголовніші риси характеру людини.
+							</p>
+
+							<p class='accordion-item arcans'>
+								<b>
+									Розрахунок арканів не буде схожим на визначення головних арканів по матриці!!
+								</b>
+							</p>
+
+							<p class='accordion-item arcans'>
+								Це різні речі - тут ми визначаємо архетипи за якими нам слід рухатися по життю,
+								розберемо сильні та слабкі сторони характеру, що варто проробити.
+							</p>
+
+							<p class='accordion-item arcans'>
+								Також визначимо те з чим ми часто можемо стикатися по життю, які ситуації нас можуть
+								переслідувати
+								Це робота над характером!!
+							</p>
+
+							<p class='accordion-item arcans'>
+								Для цього потрібна лише ваша дата народження повна.
+								Послуга виконується протягом 3 днів. Ви отримуєте файл зі своїми архетипами, порадами, і
+								афірмації для кожного вашого аркана, а також чіткі ,,плюси,, і ,,мінуси,, свого
+								характеру. Опис ситуацій, які часто вас переслідують, навіщо доля їх вам надає та що з
+								ними робити. <b>А також дві!! практики для проживання своїх арканів</b>
+							</p>
+						</ol>
+
+						<footer class='accordion-footer'>
+							<span class='accordion-price accordion-price-two'>500 грн</span>
+						</footer>
+					</main>
+				</div>
 
 			</section>
 		</article>
