--- a/index.html
+++ b/index.html
@@ -181,6 +181,46 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</footer>
 					</main>
 				</div>
+				<div class='accordion'>
+					<header class='accordion-header'>
+						<h4 class='accordion-title'>Сварка</h4>
+						<img src="./assets/icons/IconPlus.svg" alt="accrodion-icon" class="accordion-icon">
+					</header>
+					<main class='accordion-container'>
+						<ol class='accordion-list'>
+							<li class='accordion-item'>У чому реальний корінь сварки?</li>
+							<li class='accordion-item'>Що він зараз думає про мене?</li>
+							<li class='accordion-item'>Що він думає про цю ситуацію?</li>
+							<li class='accordion-item'>Його плани, чи думає він миритися?</li>
+							<li class='accordion-item'>Варто мені робити перші кроки?</li>
+							<li class='accordion-item'>Перспектива відносин після сварки</li>
+							<li class='accordion-item'>Як мені вести себе після його прояву</li>
+						</ol>
+
+						<footer class='accordion-footer'>
+							<span class='accordion-price accordion-price-one'>333 грн</span>
+						</footer>
+					</main>
+				</div>
+				<div class='accordion'>
+					<header class='accordion-header'>
+						<h4 class='accordion-title'>З минулого</h4>
+						<img src="./assets/icons/IconPlus.svg" alt="accrodion-icon" class="accordion-icon">
+					</header>
+					<main class='accordion-container'>
+						<ol class='accordion-list'>
+							<li class='accordion-item'>Навіщо повернулась конкретна людина з минулого?</li>
+							<li class='accordion-item'>Що я отримую приймаючи його?</li>
+							<li class='accordion-item'>Що я отримую не приймаючи його?</li>
+							<li class='accordion-item'>Спілкування найближчим часом</li>
+							<li class='accordion-item'>Порада</li>
+						</ol>
+
+						<footer class='accordion-footer'>
+							<span class='accordion-price accordion-price-one'>212 грн</span>
+						</footer>
+					</main>
+				</div>
 			</section>
 		</article>
 
@@ -300,6 +340,91 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 					</main>
 				</div>
 
+				<div class='accordion'>
+					<header class='accordion-header'>
+						<h4 class='accordion-title'>Моя безпека</h4>
+						<img src="./assets/icons/IconPlus.svg" alt="accrodion-icon" class="accordion-icon">
+					</header>
+					<main class='accordion-container'>
+						<ol class='accordion-list'>
+							<li class='accordion-item'>Це питання розглядається на безпеку вашого життя. Воно не може
+								бути на 100% точним , адже задіяно забагато різних осіб і моментів!!! Бажано дивитися на
+								невеликі строки</li>
+						</ol>
+
+						<footer class='accordion-footer'>
+							<span class='accordion-price accordion-price-two'>100 грн</span>
+						</footer>
+					</main>
+				</div>
+
+				<div class='accordion'>
+					<header class='accordion-header'>
+						<h4 class='accordion-title'>Моя безпека</h4>
+						<img src="./assets/icons/IconPlus.svg" alt="accrodion-icon" class="accordion-icon">
+					</header>
+					<main class='accordion-container'>
+						<ol class='accordion-list'>
+							<li class='accordion-item'>Це питання розглядається на безпеку вашого життя. Воно не може
+								бути на 100% точним , адже задіяно забагато різних осіб і моментів!!! Бажано дивитися на
+								невеликі строки</li>
+						</ol>
+
+						<footer class='accordion-footer'>
+							<span class='accordion-price accordion-price-two'>100 грн</span>
+						</footer>
+					</main>
+				</div>
+
+				<div class='accordion'>
+					<header class='accordion-header'>
+						<h4 class='accordion-title'>Мій сезон</h4>
+						<img src="./assets/icons/IconPlus.svg" alt="accrodion-icon" class="accordion-icon">
+					</header>
+					<main class='accordion-container'>
+						<ol class='accordion-list'>
+							<li class='accordion-item'>(Моє літо/осінь/зима/весна)
+								Тут ми розглядаємо як пройде ваш один сезон за наступними питаннями:
+
+								1. Загальна характеристика сезону?
+								2. Що чекає в особистому житті?
+								3. Що чекає в роботі/навчанні?
+								4. Яке фінансове становище буде протягом місяця?
+								5. Порада + застереження
+								6. + ваше питання повʼязане з сезоном</li>
+						</ol>
+
+						<footer class='accordion-footer'>
+							<span class='accordion-price accordion-price-two'>388 грн</span>
+						</footer>
+					</main>
+				</div>
+
+				<div class='accordion'>
+					<header class='accordion-header'>
+						<h4 class='accordion-title'>Хто він?</h4>
+						<img src="./assets/icons/IconPlus.svg" alt="accrodion-icon" class="accordion-icon">
+					</header>
+					<main class='accordion-container'>
+						<ol class='accordion-list'>
+							<li class='accordion-item'>Людина зараз (характер/поведінка/зовнішність)
+								 2 Його позитивні риси 
+								 3 Його негативні риси
+								 4 Що відбувається в особистому житті зараз?
+								 5 Його робота
+								 6 Його фінанси
+								 7 Яким його бачать інші?
+								 8 Як він ставиться до себе?
+								 9 Які проблеми в житті?
+								 10 Який талант
+						</ol>
+
+						<footer class='accordion-footer'>
+							<span class='accordion-price accordion-price-two'>500 грн</span>
+						</footer>
+					</main>
+				</div>
+
 			</section>
 		</article>
 
@@ -346,6 +471,69 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 
 						<footer class='accordion-footer'>
 							<span class='accordion-price accordion-price-one'>500 грн</span>
+						</footer>
+					</main>
+				</div>
+
+
+
+				<div class='accordion'>
+					<header class='accordion-header'>
+						<h4 class='accordion-title'>Мої фінанси</h4>
+						<img src="./assets/icons/IconPlus.svg" alt="accrodion-icon" class="accordion-icon">
+					</header>
+					<main class='accordion-container'>
+						<ol class='accordion-list'>
+							<li class='accordion-item'> Як буде з фінансами протягом певного часу?</li>
+							<li class='accordion-item'>Порада</li>
+						</ol>
+
+						<footer class='accordion-footer'>
+							<span class='accordion-price accordion-price-one'>150 грн</span>
+						</footer>
+					</main>
+				</div>
+
+				<div class='accordion'>
+					<header class='accordion-header'>
+						<h4 class='accordion-title'>Нове місце роботи</h4>
+						<img src="./assets/icons/IconPlus.svg" alt="accrodion-icon" class="accordion-icon">
+					</header>
+					<main class='accordion-container'>
+						<ol class='accordion-list'>
+							<li class='accordion-item'>Якою буде робота?</li>
+							<li class='accordion-item'>Чим прийдеться займатися?</li>
+							<li class='accordion-item'>Фінансове забезпечення</li>
+							<li class='accordion-item'>Моральний стан</li>
+							<li class='accordion-item'>Відносини з колегами</li>
+							<li class='accordion-item'>Відносини з керівництвом</li>
+							<li class='accordion-item'>Перспективи</li>
+						</ol>
+
+						<footer class='accordion-footer'>
+							<span class='accordion-price accordion-price-one'>333 грн</span>
+						</footer>
+					</main>
+				</div>
+
+				<div class='accordion'>
+					<header class='accordion-header'>
+						<h4 class='accordion-title'>Як стати popular</h4>
+						<img src="./assets/icons/IconPlus.svg" alt="accrodion-icon" class="accordion-icon">
+					</header>
+					<main class='accordion-container'>
+						<ol class='accordion-list'>
+							<li class='accordion-item'>Який внутрішній чинник заважає просуванню в соцмережах?</li>
+							<li class='accordion-item'>Який внутрішній чинник допомагає просуванню в соцмережах?</li>
+							<li class='accordion-item'>Який зовнішній чинник заважає просуванню в соцмережах?</li>
+							<li class='accordion-item'>Який зовнішній чинник допомагає просуванню в соцмережах?</li>
+							<li class='accordion-item'>Моя сильна та слабка сторони
+							</li>
+							<li class='accordion-item'>Порада для збільшення аудиторії</li>
+						</ol>
+
+						<footer class='accordion-footer'>
+							<span class='accordion-price accordion-price-one'>444 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -472,6 +660,48 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</footer>
 					</main>
 				</div>
+
+				<div class='accordion'>
+					<header class='accordion-header'>
+						<h4 class='accordion-title'>Невпевненість</h4>
+						<img src="./assets/icons/IconPlus.svg" alt="accrodion-icon" class="accordion-icon">
+					</header>
+					<main class='accordion-container'>
+						<ol class='accordion-list'>
+							<li class='accordion-item'>Чому я відчуваю себе невпевнено?</li>
+							<li class='accordion-item'>Моя справжня натура?</li>
+							<li class='accordion-item'>Що робити аби знищити невпевненість?</li>
+							<li class='accordion-item'>Що мене тягне в негатив?</li>
+							<li class='accordion-item'>Порада</li>
+						</ol>
+
+						<footer class='accordion-footer'>
+							<span class='accordion-price accordion-price-two'>200 грн</span>
+						</footer>
+					</main>
+				</div>
+
+				<div class='accordion'>
+					<header class='accordion-header'>
+						<h4 class='accordion-title'>Очима чоловіків</h4>
+						<img src="./assets/icons/IconPlus.svg" alt="accrodion-icon" class="accordion-icon">
+					</header>
+					<main class='accordion-container'>
+						<ol class='accordion-list'>
+							<li class='accordion-item'>Якими тебе бачать чоловіки?</li>
+							<li class='accordion-item'>Що притягує в вас?</li>
+							<li class='accordion-item'>Що відштовхує в вас?</li>
+							<li class='accordion-item'>Яких чоловіків ти притягуєш?</li>
+							<li class='accordion-item'>Які чоловіки вам підходять?</li>
+							<li class='accordion-item'>На що звернути увагу при спілкуванні з чоловіками?</li>
+							<li class='accordion-item'>Загальна порада</li>
+						</ol>
+
+						<footer class='accordion-footer'>
+							<span class='accordion-price accordion-price-two'>333 грн</span>
+						</footer>
+					</main>
+				</div>
 			</section>
 		</article>
 
@@ -487,7 +717,9 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 					<main class='accordion-container'>
 						<ol class='accordion-list'>
 							<li class='accordion-item'>Файл +-30 сторінок ВАШИХ особистих рекомендацій стосовно
-								фінансів</li>
+								фінансів.</li>
+							<li class='accordion-item'>Ви отримаєте стабільний дохід, інформацію як вести себе по
+								відношенню до фінансів. А також дві практики на гроші на вибір.</li>
 						</ol>
 
 						<footer class='accordion-footer'>
@@ -500,57 +732,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 
 			</section>
 		</article>
-		<article class="catalogs-container">
-			<section class="catalog-accordion-container catalog-accordion-container-two">
-				<h3 class='catalog-accordion-title'>Розрахунок Арканів
-					особистості </h3>
-				<div class='accordion'>
-					<header class='accordion-header'>
-						<h4 class='accordion-title'>Розрахунок арканів
-							особистості</h4>
-						<img src="./assets/icons/IconPlus.svg" alt="accrodion-icon" class="accordion-icon">
-					</header>
-					<main class='accordion-container'>
-						<ol class='accordion-list'>
-							<p class='accordion-item arcans'>
-								<b>Розрахунок арканів особистоті</b> - це визначення 4х ваших найголовніших арканів. За
-								допомогою цього методу ми можемо зчитати найголовніші риси характеру людини.
-							</p>
 
-							<p class='accordion-item arcans'>
-								<b>
-									Розрахунок арканів не буде схожим на визначення головних арканів по матриці!!
-								</b>
-							</p>
-
-							<p class='accordion-item arcans'>
-								Це різні речі - тут ми визначаємо архетипи за якими нам слід рухатися по життю,
-								розберемо сильні та слабкі сторони характеру, що варто проробити.
-							</p>
-
-							<p class='accordion-item arcans'>
-								Також визначимо те з чим ми часто можемо стикатися по життю, які ситуації нас можуть
-								переслідувати
-								Це робота над характером!!
-							</p>
-
-							<p class='accordion-item arcans'>
-								Для цього потрібна лише ваша дата народження повна.
-								Послуга виконується протягом 3 днів. Ви отримуєте файл зі своїми архетипами, порадами, і
-								афірмації для кожного вашого аркана, а також чіткі ,,плюси,, і ,,мінуси,, свого
-								характеру. Опис ситуацій, які часто вас переслідують, навіщо доля їх вам надає та що з
-								ними робити. <b>А також дві!! практики для проживання своїх арканів</b>
-							</p>
-						</ol>
-
-						<footer class='accordion-footer'>
-							<span class='accordion-price accordion-price-two'>500 грн</span>
-						</footer>
-					</main>
-				</div>
-
-			</section>
-		</article>
 	</section>
 
 	<section class='reviews-container'>
@@ -558,6 +740,30 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 
 		<div class="slider-container">
 			<article class="slider">
+				<div class='slider-item long'>
+					<p class='slider-item-content'>
+						Беру расклад у тебя не первый раз и стала реально постоянным клиентом. Ты попадаешь абсолютно по
+						всем фронтам, ты большая молодец! доверяю больше чем себе, все расклады сбылись.
+					</p>
+				</div>
+				<div class='slider-item long'>
+					<p class='slider-item-content'>
+						Анюта, дуже дякую, вже не
+						вперше звертаюсь і все чітко та зрозуміло та по суті говориш, я бачу результат нашої співпраці,
+						дотримуюсь всіх твоїх рекомендацій і все йде на краще
+					</p>
+				</div>
+				<div class='slider-item long'>
+					<p class='slider-item-content'>
+						По поводу расклада, ты прям в потоке говорила, это круто, очень много точных слов сказала по
+						поводу моего окружения и моих мыслей тоже. Опять же смотивировала дальше идти и не
+						останавливаться, наконец то не только на пацанов беру расклады, они кстати тоже сбылись
+						полностью
+					</p>
+				</div>
+
+
+
 				<div class='slider-item long'>
 					<p class='slider-item-content'>
 						Ох, щодо емоційності жиза, це все життя зі мною🫠 Дуже дякую тоб, мене це дуже сильно
