--- a/index.html
+++ b/index.html
@@ -360,38 +360,20 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 
 				<div class='accordion'>
 					<header class='accordion-header'>
-						<h4 class='accordion-title'>Моя безпека</h4>
-						<img src="./assets/icons/IconPlus.svg" alt="accrodion-icon" class="accordion-icon">
-					</header>
-					<main class='accordion-container'>
-						<ol class='accordion-list'>
-							<li class='accordion-item'>Це питання розглядається на безпеку вашого життя. Воно не може
-								бути на 100% точним , адже задіяно забагато різних осіб і моментів!!! Бажано дивитися на
-								невеликі строки</li>
-						</ol>
-
-						<footer class='accordion-footer'>
-							<span class='accordion-price accordion-price-two'>100 грн</span>
-						</footer>
-					</main>
-				</div>
-
-				<div class='accordion'>
-					<header class='accordion-header'>
 						<h4 class='accordion-title'>Мій сезон</h4>
 						<img src="./assets/icons/IconPlus.svg" alt="accrodion-icon" class="accordion-icon">
 					</header>
 					<main class='accordion-container'>
-						<ol class='accordion-list'>
-							<li class='accordion-item'>(Моє літо/осінь/зима/весна)
-								Тут ми розглядаємо як пройде ваш один сезон за наступними питаннями:
 
-								1. Загальна характеристика сезону?
-								2. Що чекає в особистому житті?
-								3. Що чекає в роботі/навчанні?
-								4. Яке фінансове становище буде протягом місяця?
-								5. Порада + застереження
-								6. + ваше питання повʼязане з сезоном</li>
+						<ol class='accordion-list'>
+							<li class='accordion-item'>
+								Загальна характеристика сезону?
+							</li>
+							<li class="accordion-item">Що чекає в особистому житті?</li>
+							<li class="accordion-item">Що чекає в роботі/навчанні?</li>
+							<li class="accordion-item"> Яке фінансове становище буде протягом місяця?</li>
+							<li class="accordion-item">Порада + застереження</li>
+							<li class="accordion-item">+ ваше питання повʼязане з сезоном</li>
 						</ol>
 
 						<footer class='accordion-footer'>
@@ -407,16 +389,17 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 					</header>
 					<main class='accordion-container'>
 						<ol class='accordion-list'>
-							<li class='accordion-item'>Людина зараз (характер/поведінка/зовнішність)
-								 2 Його позитивні риси 
-								 3 Його негативні риси
-								 4 Що відбувається в особистому житті зараз?
-								 5 Його робота
-								 6 Його фінанси
-								 7 Яким його бачать інші?
-								 8 Як він ставиться до себе?
-								 9 Які проблеми в житті?
-								 10 Який талант
+
+							<li class="accordion-item">Людина зараз (характер/поведінка/зовнішність)</li>
+							<li class="accordion-item">Його позитивні риси</li>
+							<li class="accordion-item">Його негативні риси</li>
+							<li class="accordion-item">Що відбувається в особистому житті зараз?</li>
+							<li class="accordion-item">Його робота</li>
+							<li class="accordion-item">Його фінанси</li>
+							<li class="accordion-item">Яким його бачать інші?</li>
+							<li class="accordion-item">Як він ставиться до себе?</li>
+							<li class="accordion-item">Які проблеми в житті?</li>
+							<li class="accordion-item">Який талант</li>
 						</ol>
 
 						<footer class='accordion-footer'>
@@ -723,7 +706,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price accordion-price-one'>444 грн</span>
+							<span class='accordion-price accordion-price-one'>555 грн</span>
 						</footer>
 					</main>
 				</div>
