--- a/index.html
+++ b/index.html
@@ -873,12 +873,12 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 			<section class='social-network-blocks'>
 				<div class='social-network-block'>
 					<a target='_blank' class='social-network-block-link'
-						href="https://instagram.com/nyuta__anyuta_?igshid=YTQwZjQ0NmI0OA==">
+						href="https://www.instagram.com/taro_vidmochka?igsh=MWZtbHZmbXdidGR1bw%3D%3D">
 						<img src="./assets/icons/IconInstagram.svg" alt="insagram-icon">
 					</a>
 				</div>
 				<div class='social-network-block'>
-					<a target='_blank' class='social-network-block-link' href="https://t.me/anyutik20">
+					<a target='_blank' class='social-network-block-link' href="https://t.me/anyutik_taro">
 						<img src="./assets/icons/IconTelegram.svg" alt="telegram-icon">
 					</a>
 				</div>
